[project]
name = "linkcheck"
version = "0.3.1"
description = "Fast broken link checker for Markdown files"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
linkcheck = "linkcheck.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
